_sass/pages/index.scss
#hero {
  background-image: url($baseurl + "/assets/images/backgrounds/hero.jpg");
  background-position: 8% 0;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: calc(100svh - 100px);
  padding: 2rem 10vw;
  position: relative;
  z-index: 1;

  &__title {
    z-index: 3;
    font-size: clamp(1.75rem, 1.2407rem + 2.716vw, 4.5rem);
    margin: 1rem 1rem 3rem 0;
    padding: 1rem 1rem 1rem 0;
    max-width: 625px;
    font-weight: 600;

    &--focus {
      font-size: clamp(2rem, 1.4444rem + 2.963vw, 5rem);
      color: var(--brand);
      width: fit-content;
      text-transform: uppercase;
      font-weight: 800;
    }
  }

  &__subtitle {
    font-size: var(--fs-lg);
    margin-bottom: 6rem;
    font-weight: 400;
    font-family: var(--ff-body);
    max-width: 600px;
    line-height: 1.5;
  }

  &__button--apply-now {
    margin-right: 2rem;
  }

}

#tagline-wrapper {
  background-color: var(--brand);
}

#tagline {
  text-transform: uppercase;
  text-align: center;
  font-family: var(--ff-header);
  padding-bottom: 0;
}

#why-choose-text {
  display: grid;
  grid-template-columns: 1fr 4px 1fr;
  gap: var(--sp-xl);
  padding-top: var(--sp-xxl);

  @media (max-width: 700px) {
    grid-template-columns: 1fr;
    grid-template-rows: auto 1fr;
  }

  & > p {
    max-width: 50ch;

    @media (max-width: 700px) {
      max-width: initial;
    }
  }

  & > p:first-child {
    margin-left: auto;

    @media (max-width: 700px) {
      margin-left: 0;
      margin-bottom: var(--sp-xxl);
    }
  }

  & > .line {

    @media (max-width: 700px) {
      display: none;
    }
  }
}

#making-a-difference-background {
  background-image: url($baseurl + "/assets/images/backgrounds/graduation.jpg");
  background-repeat: no-repeat;
  background-position: top center;
  background-size: cover;
  background-attachment: fixed;
}

#making-a-difference-text {
  padding: var(--sp-xl);
  background: var(--base-100);
  border-radius: var(--border-radius);
  width: fit-content;
}

#stats-wrapper {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: var(--sp-xxl);
  margin: var(--sp-xxxxl) auto;

  @media (max-width: 1000px) {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(3, 1fr);
    margin-bottom: 0;
  }
}

.stat {
  position: relative;
  height: 200px;
  width: 200px;
  line-height: 200px;
  text-align: center;
  margin-inline: auto;

  @media (max-width: 1000px) {
    margin: var(--sp-xxl) auto;
  }

  &::before {
    position: absolute;
    content: '';
    top: 0px;
    left: 0px;
    height: 100%;
    width: 100%;
    transform: rotateZ(45deg);
    background-color: var(--brand);
    border-radius: var(--border-radius);
    z-index: 0;
  }

  & > * {
    position: relative;
    z-index: 1;
  }

  &__header {
    top: 1.5rem;
    font-family: var(--ff-header);
    font-size: var(--fs-xxxl);
    color: var(--base-100);
    padding-bottom: var(--sp-xxl);
    font-weight: 800;

    @media (max-width: 1000px) {
      padding-bottom: var(--sp-xxxl);
    }
  }

  &__body {
    line-height: 1.2;
    font-size: var(--fs-lg);
  }
}

@media (max-width: 1000px) {
  #hero {
    background-position: 30% 0;

    &__title {
      padding: 0;
      margin: 1rem 1rem 3rem 0;

      &--focus {
        background: none;
        backdrop-filter: none;
      }
    }

    &__opacity {
      width: 100%;
      height: 100%;
      background: rgb(231,231,231, 0.7);
      backdrop-filter: blur(8px);
      position: absolute;
      top: 0;
      left: 0;
      z-index: -1;
    }
  
    &__subtitle {
      margin-bottom: 8rem;
      font-weight: 400;
      font-family: var(--ff-body);
    }
  
    &__button--apply-now {
      margin-right: 2rem;
    }
  
  }
}

.services {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-inline: auto;
  width: fit-content;
  width: -moz-fit-content;
  max-width: 50rem;
  gap: var(--sp-xxxxl);
  justify-content: center;

  @media (max-width: 500px) {
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    gap: var(--sp-xxl);
  }

  &__column {
    display: flex;
    flex-direction: column;
    gap: var(--sp-xxl);
  }

  .service {
    display: flex;
    flex-direction: row;
    gap: var(--sp-xl);
    align-items: center;

    svg {
      height: var(--sp-xxl);
      width: var(--sp-xxl);
    }

    p {
      text-wrap: nowrap;
    }
  }
}

.cta {
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  gap: var(--sp-xxxxl);

  @media (max-width: 700px) {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr auto 1fr;

    .line.line--vertical {
      height: 4px;
      width: 100%;
    }
  }

  .cta__students, .cta__supporters {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 30rem;
    margin-inline: auto;
  }

  h2 {
    padding-bottom: var(--sp-xxl);
  }

  p {
    padding-bottom: var(--sp-xxxxl);
    flex-grow: 1;
  }

  
}



@media (max-width: 600px) {
  #hero {
    padding: 2rem;
  }
}

@media (max-width: 400px) {
  #hero__title--focus {
    text-wrap: wrap;
  }
}

